--- a/views/login.html
+++ b/views/login.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>Login to your account:</h1>
-    <form method='POST'>
-        <label>Username: </label><input type="text" name='user'>
-        <label>Password: </label><input type="text" name='pass'>
-        <input type='submit' name='user'>
+    <form method='POST' action='/myshelf'>
+        <label>Username: </label><input type="text" name='user' id='user'>
+        <label>Password: </label><input type="text" name='pass' id='pass'>
+        <input type='submit' name='submit' id='submit'>
     </form>
+    <script src='../sendCreds.js'></script>
 </body>
 </html>
