password field, basic cleanup

--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
     <h1>Login to your account:</h1>
     <form method='POST' action='/myshelf'>
         <label>Username: </label><input type="text" name='user' id='user'>
-        <label>Password: </label><input type="text" name='pass' id='pass'>
+        <label>Password: </label><input type="password" name='pass' id='pass'>
         <input type='submit' name='submit' id='submit'>
     </form>
     <script src='../sendCreds.js'></script>
