--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(img/pexels-element-digital-1370295.jpg);
+  background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Quicksand', sans-serif;
@@ -12,12 +12,12 @@ body {
 }
 
 .field {
-  margin-bottom: 1em;
+  margin-bottom: .75em;
 }
 
 label { 
   display: block; 
-  margin-bottom: .25em;
+  margin-bottom: .10em;
 }
 
 .signup-form {
@@ -25,4 +25,17 @@ label {
   margin: auto;
   background-color: grey;
   max-width: 60%;
+}
+
+.signupbtn {
+  margin-bottom: 1em;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.footer {
+  text-decoration: none;
+  color: white;
 }
