added password validation and check if username taken check

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -39,3 +39,13 @@ a:link {
   text-decoration: none;
   color: white;
 }
+
+#username-error {
+  color: rgb(232, 0, 0);
+  font-size: medium;
+}
+
+#password-error {
+  color: rgb(232, 0, 0);
+  font-size: medium;
+}
