--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,5 @@
 body {
     background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
   }
@@ -42,4 +41,12 @@ a:link {
 .footer {
     text-decoration: none;
     color: white;
+}
+
+.photo-credit{
+    text-align: center;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    padding: 1%;
 }
