--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,6 @@
+*{
+    color:#fff;
+}
 body {
     background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
     background-size: cover;
@@ -6,7 +9,6 @@ body {
 
 .title {
     text-align: center;
-    color: white;
     font-size: x-large;
 }
 
@@ -40,11 +42,10 @@ a:link {
 
 .footer {
     text-decoration: none;
-    color: white;
 }
 
 .photo-credit{
-    text-align: center;
+    textal
     position: fixed;
     right: 0;
     bottom: 0;
