--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,5 @@
 body {
   background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Quicksand', sans-serif;
 }
@@ -48,4 +47,12 @@ a:link {
 #password-error {
   color: rgb(232, 0, 0);
   font-size: medium;
+}
+
+.photo-credit{
+  text-align: center;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  padding: 1%;
 }
