--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -1,6 +1,5 @@
 body {
     background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
   }
@@ -40,3 +39,10 @@ body {
     color: white;
   }
 
+  .photo-credit{
+    text-align: center;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    padding: 1%;
+  }
