--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,14 @@
+*{
+    color: #fff;
+}
 body {
     background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
   }
 
 .title {
     text-align: center;
-    color: white;
     font-size: x-large;
 }
   
@@ -16,7 +17,6 @@ body {
     margin: auto;
     padding-top: 1em;
     padding-bottom: 1em;
-    color: white;
     background-color: grey;
     max-width: 60%;
 }
@@ -27,5 +27,12 @@ a:link {
 
 .footer {
     text-decoration: none;
-    color: white;
 }
+
+.photo-credit{
+    text-align: center;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    padding: 1%;
+  }
