--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,12 +1,24 @@
+.book-row{
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    margin: 1%;
+}
+
+.book-link{
+    margin: 0 1%;
+}
 
 .cover-holder{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 1px solid rgb(155, 154, 154);
-    margin: 1%;
     width: 100px;
+    height: 200px;
     padding: 0;
 }
 
 .list-cover{
-    width: 100%;
+    width: 90%;
 }
