--- a/public/css/addbook.css
+++ b/public/css/addbook.css
@@ -8,6 +8,10 @@ body {
   .field {
     margin-bottom: .75em;
   }
+
+  #book-cond-select {
+    font-weight: bold;
+  }
   
   label { 
     display: block; 
