--- a/public/css/account.css
+++ b/public/css/account.css
@@ -5,32 +5,37 @@ body {
     font-family: 'Quicksand', sans-serif;
   }
   
-  .title {
-    text-align: center;
-    color: white;
-    font-size: x-large;
-  }
+.title {
+  text-align: center;
+  color: white;
+  margin-bottom: 10px;
+}
   
-  .field {
-    margin-bottom: .75em;
-  }
-
-  
-  .account-table{
-    text-align: center;
-    margin: auto;
-    background-color: grey;
-    max-width: 40%;
-  }
-
-  .accounts {
-      padding-top: 20px;
-  }
 
   td {
-      border: 1px solid black;
-      border-width: 3px;
+    font-size: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 1px solid black;
+    border-width: 3px;
   }
+
+  
+.account-table{
+  text-align: center;
+  margin: auto;
+  background-color: grey;
+  max-width: 40%;
+  padding-top: 10px;
+}
+
+.accounts {
+    padding-top: 20px;
+}
+
+h4 {
+  padding-bottom: 15px;
+}
 
 
   
