--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,17 @@
 
 body,
 html{
-    color: #d38069;
+    color:#fff;
     font-size: 30px;
     font-weight: 400;
-    font-family: sans-serif;
+    font-family: 'Quicksand', sans-serif;
+}
+
+body{
+    background-image: linear-gradient(#00000099, #00000099), url("./img/pexels-element-digital-1370295.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
 }
 
 section{
@@ -28,37 +35,35 @@ h3 {
 /************Buttons************/
 
 button{
-    color: #d38069;
-    background-color: #491405;
+    background-color: #52855b;
     padding: 2%;
     border-radius: 5px;
     font-size: 70%;
-    border: #491405;
-    transition: color 0.2s, border 0.2s, background-color 0.2s;
+    border:#52855b;
+    transition: border 0.2s, background-color 0.2s;
 }
 
 button:hover{
-    background-color: #d38069;
-    color: #491405;
-    border: #d38069;
+    background-color: #2c4931;
+    border: #2c4931;
 }
 
 /************Links************/
 
 a:link,
 a:visited {
-    color: #d38069;
+    /* color: #fff; */
     text-decoration: none;
     padding-bottom: 1px;
-    border-bottom: 1px solid #d38069
+    /* border-bottom: 1px solid #d38069 */
     transition: border-bottom 0.2s, color 0.2s, background-color 0.2s;
 }
 
 a:hover,
 a:active {
-    color: #491405;
-    border-bottom: #d3806900;
-    background-color: #d38069;
+    color: #fff;
+    border-bottom:#2c493100;
+    background-color: #2c4931;
     border-radius: 5px;
 }
 
@@ -108,38 +113,10 @@ nav ion-icon {
     margin: 0;
 }
 
-.logout-screen{
-    background-image: linear-gradient(#000000, #00000099), url("img/pexels-janko-ferlic-590493.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
-}
-
-.question{
-    margin: 5% auto;
-}
-.question-header{
-    margin: auto 15%;
-    width: 70%;
-}
-
-.answer{
+.photo-credit{
     text-align: center;
-    margin: 5% 15%;
-}
-
-.answer li{
-    text-align: left;
-    margin: auto 5% ;
-}
-
-.img-credit{
-    text-align: center;
-    font-size: 60%;
     position: fixed;
-    bottom: 0;
     right: 0;
+    bottom: 0;
     padding: 1%;
-    margin-top: 20px;
-    margin-bottom: 0;
-} 
+  }
