--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,17 +1,3 @@
-*{
-    color:#fff;
-}
-body {
-    background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-    background-size: cover;
-    font-family: 'Quicksand', sans-serif;
-  }
-
-.title {
-    text-align: center;
-    font-size: x-large;
-}
-
 .field {
     margin-bottom: .75em;
 }
@@ -25,6 +11,7 @@ label {
     text-align: center;
     margin: auto;
     background-color: grey;
+    border-color: grey;
     max-width: 60%;
 }
 
@@ -34,19 +21,4 @@ label {
 
 a:link {
     text-decoration: none;
-}
-
-#homelink {
-    color: black;
-}
-
-.footer {
-    text-decoration: none;
-}
-
-.photo-credit{
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    padding: 1%;
 }
