--- a/public/css/bookshelf.css
+++ b/public/css/bookshelf.css
@@ -1,20 +1,15 @@
-body {
-    background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
-    background-size: cover;
-    font-family: 'Quicksand', sans-serif;
-  }
+h1{
+  padding-top: 15px;
+}
 
-  h1{
-    padding-top: 15px;
-  }
-
-  h4 {
-    padding-bottom: 25px;
-  }
+h4 {
+  padding-bottom: 25px;
+}
 
 #bookshelf-table {
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
+  margin: auto;  
   text-align: center;
 }
 
@@ -44,17 +39,4 @@ button {
   padding-bottom: 12px;
   background-color: #52855b;
   color: white;
-}
-
-.footer {
-  text-decoration: none;
-  color: white;
-}
-  
-.photo-credit{
-  text-align: center;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  padding: 1%;
 }
