Added title css
Added title css, couldn't get the H1 to work properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,9 +24,22 @@ section{
 
 /************Headers************/
 
-h1,
+h1{
+    color: white;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+}
+
 h2,
 h3 {
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.title{
+    color: white;
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
