--- a/public/css/addbook.css
+++ b/public/css/addbook.css
@@ -1,20 +1,44 @@
-  .field {
+.maindiv {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.title {
+  text-align: center;
+  color: white;
+  margin-bottom: 10px;
+  font-family: 'Roboto', sans-serif;
+  padding-top: 20px;
+}
+
+.field {
     margin-bottom: .75em;
   }
 
-  #book-cond-select {
-    font-weight: bold;
-  }
+form {
+  margin-top: 15px;
+}
+
+.forminfo {
+  font-size: 25px;
+  font-weight: bolder;
+}
   
   label { 
     display: block; 
     margin-bottom: .10em;
   }
+
+a {
+  text-align: center;
+}
   
   .addbook-form {
     text-align: center;
     margin: auto;
-    background-color: grey;
+    background-color: rgba(194, 200, 204, 0.5);
     max-width: 60%;
   }
   
