--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,14 +5,15 @@
 
 body,
 html{
-    color:#fff;
-    font-size: 30px;
-    font-weight: 400;
-    font-family: 'Quicksand', sans-serif;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
-    background-image: linear-gradient(#00000099, #00000099), url("./img/pexels-element-digital-1370295.jpg");
+    background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
     background-attachment: fixed;
     background-size: cover;
     position: relative;
@@ -29,6 +30,7 @@ h1{
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
+    
 }
 
 h2,
@@ -48,12 +50,13 @@ h3 {
 /************Buttons************/
 
 button{
-    background-color: #52855b;
+    background-color: #496b4f;
     padding: 2%;
     border-radius: 5px;
     font-size: 70%;
-    border:#52855b;
+    border: #496b4f;
     transition: border 0.2s, background-color 0.2s;
+    margin-bottom: 15px;
 }
 
 button:hover{
