--- a/public/css/account.css
+++ b/public/css/account.css
@@ -8,9 +8,10 @@
 }
 
 .account-table {
-  background-color: rgba(194, 200, 204, 0.5);
+  background-color: rgba(194, 200, 204, 0.45);
   width: 40%;
   margin: 0 auto;
+  border-radius: 25px;
 }
   
 
