--- a/public/css/addbook.css
+++ b/public/css/addbook.css
@@ -40,6 +40,7 @@ a {
     margin: auto;
     background-color: rgba(194, 200, 204, 0.5);
     max-width: 60%;
+    border-radius: 25px;
   }
   
   .addbtn {
