--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -1,13 +1,14 @@
 body {
     background-image: linear-gradient(#00000099, #00000099), url(img/pexels-element-digital-1370295.jpg);
     background-size: cover;
-    font-family: 'Quicksand', sans-serif;
   }
   
   .title {
     text-align: center;
     color: white;
     font-size: x-large;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 20px;
   }
   
   .field {
@@ -22,21 +23,27 @@ body {
   .update-form {
     text-align: center;
     margin: auto;
-    background-color: grey;
-    max-width: 60%;
-  }
-  
-  .signupbtn {
-    margin-bottom: 1em;
+    width: 50%;
+    font-family: 'Roboto', sans-serif;
+    padding-bottom: 15px;
+    background-color: rgba(194, 200, 204, 0.45);
+    color: white;
+    border-radius: 25px;
   }
   
   a:link {
     text-decoration: none;
   }
+
+  p {
+    font-size: 20px;
+    font-weight: light;
+  }
   
   .footer {
     text-decoration: none;
     color: white;
+    font-size: 15px;
   }
 
   .photo-credit{
